Proxy settings for Telegram module, with added HttpToSocks5Proxy package

--- a/ThunderED/settings.def.json
+++ b/ThunderED/settings.def.json
@@ -365,6 +365,10 @@
 
   "telegramModule": {
     "token": "YOUR TOKEN",
+	"ProxyIp": "",
+	"ProxyPort": 0,
+	"ProxyUser": "",
+	"ProxyPass": "",
     "RelayChannels": [
       {
         "telegram": 0,
