--- a/ThunderED/ThunderED.csproj
+++ b/ThunderED/ThunderED.csproj
@@ -40,6 +40,7 @@
     <PackageReference Include="NETStandard.HttpListener" Version="1.0.3.5" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Telegram.Bot" Version="14.4.0" />
+	<PackageReference Include="HttpToSocks5Proxy" Version="1.0.5" />
   </ItemGroup>
 
   <ItemGroup>
